--- a/pages/toko/faq-create.html
+++ b/pages/toko/faq-create.html
@@ -75,7 +75,7 @@
                     <div class="form-group row mb-4">
                       <label class="col-form-label text-md-right col-12 col-md-2 col-lg-2"></label>
                       <div class="col-sm-12 col-md-8">
-                        <button class="btn btn-primary col-sm-12 col-md-12" onclick="addFaq()">Simpan</button>
+                        <button class="btn btn-primary col-sm-12 col-md-12" id="btn-create-faq" onclick="addFaq()">Simpan</button>
                       </div>
                     </div>
                   </div>
