--- a/pages/toko/karyawan.html
+++ b/pages/toko/karyawan.html
@@ -198,7 +198,7 @@
                   <div class="row">
                     <div class="form-group col-md-12 col-12">
                       <label class="col-form-label text-md-right">Nominal <small>(rupiah)</small></label>
-                      <input class="form-control currency" id="nominal"/>
+                      <input class="form-control currency" id="nominal-gaji"/>
                     </div>
                   </div>
                   <div class="row">
