--- a/pages/toko/pesanan.html
+++ b/pages/toko/pesanan.html
@@ -66,6 +66,11 @@
                           <span class="badge badge-white" id="total-order-batal">0</span>
                         </a>
                       </li>
+                      <li class="nav-item hide">
+                        <a class="nav-link" data-toggle="tab" href="#tolak" role="tab" aria-controls="tolak" aria-selected="false">Ditolak 
+                          <span class="badge badge-white" id="total-order-tolak">0</span>
+                        </a>
+                      </li>
                     </ul>
                   </div>
                 </div>
