--- a/pages/invoice.html
+++ b/pages/invoice.html
@@ -31,7 +31,7 @@
 
           <div class="section-body">
             <div class="invoice">
-              <div class="invoice-print">
+              <div class="invoice-print" id="invoice-print">
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="row">
@@ -87,6 +87,10 @@
                 </div>
                 <div id="info-total"></div>
               </div>
+              <hr>
+              <div class="text-md-right">
+                <button class="btn btn-warning btn-icon icon-left" onclick="javascript:printInvoice()"><i class="fas fa-print"></i> Print</button>
+              </div>
             </div>
           </div>
         </section>
@@ -107,10 +111,11 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous"></script>
-  
+
   <!-- Page Specific JS File -->
   <script src="/assets/js/custom-page/invoice.js" type="module"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/printThis/1.15.0/printThis.min.js" integrity="sha512-d5Jr3NflEZmFDdFHZtxeJtBzk0eB+kkRXWFQqEc1EKmolXjHm2IKCA7kTvXBNjIYzjXfD5XzIjaaErpkZHCkBg==" crossorigin="anonymous"></script>
+  
   <!-- Template JS File -->
   <script src="/assets/js/scripts.js"></script>
   <script src="/assets/js/custom.js"></script>
