--- a/pages/toko/grupopsi-create.html
+++ b/pages/toko/grupopsi-create.html
@@ -105,7 +105,7 @@
                     
                     <div class="form-group row">
                       <div class="col-sm-12 col-md-12">
-                        <button class="btn btn-primary col-sm-12 col-md-12" onclick="buatGrupOpsi()">Simpan</button>
+                        <button class="btn btn-primary col-sm-12 col-md-12" id="btn-create-grup" onclick="buatGrupOpsi()">Simpan</button>
                       </div>
                     </div>
                   </div>
